--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-router-dom": "^6.15.0",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
+    "typed.js": "^2.1.0",
     "vite-plugin-svgr": "^3.2.0"
   },
   "devDependencies": {
