--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@react-spring/web": "^9.7.5",
     "@vitejs/plugin-react-swc": "^3.3.2",
     "modern-normalize": "^2.0.0",
     "normalize.css": "^8.0.1",
